Nav bar updated

--- a/help.html
+++ b/help.html
@@ -9,8 +9,16 @@
   </head>
   <body>
     <header>
-      <a href="index.html">HOME</a>
-      <a href="help.html">HELP PAGE</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">HOME</a>
+          </li>
+          <li>
+            <a href="help.html">HELP PAGE</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <footer></footer>
