--- a/help.html
+++ b/help.html
@@ -5,22 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="help.css" />
+    <script src="https://kit.fontawesome.com/d81457d759.js" crossorigin="anonymous"></script>
     <title>Help page</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="index.html">HOME</a>
-          </li>
-          <li>
-            <a href="help.html">HELP PAGE</a>
-          </li>
-        </ul>
+        <header>
+      <nav class="navbar">
+        <div class="titlelogo">
+            <span>Logo</span>
+            <span class="title">Daily Affirmations</span>
+        </div>
+        <section class="nav-links">
+            <input id="check" type="checkbox" />
+            <label for="check">
+                    <i class="fa-solid fa-bars"></i>
+            </label>
+            <ul class="nav-items">
+            <li>
+                <a href="index.html">HOME</a>
+            </li>
+            <li>
+                <a href="help.html">HELP PAGE</a>
+            </li>
+            </ul>
+        </section>
       </nav>
     </header>
 
-    <footer></footer>
+    <main>
+
+    </main>
+
+    <footer>
+        <h2>Contact</h2>
+        <aside class="contact-icon">
+            <span><i class="fa-solid fa-phone"></i>Call</span>
+            <p>075 xxxx xxxx</p>
+        </aside>
+
+        <aside class="contact-icon">
+            <span><i class="fa-regular fa-envelope"></i>Mail</span>
+            <p>info@affirmations.com</p>
+        </aside>
+
+        <section class="social">
+            <ul class="name-icon">
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><a href="instagram.com">Instagram</a></li>
+            </ul>
+            <ul class="name-icon">
+                <li><i class="fa-brands fa-facebook-f"></i></li>
+                <li><a href="facebook.com">Facebook</a></li>
+            </ul>
+            <ul class="name-icon">
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><a href="">Twitter</a></li>
+            </ul>
+        </section>
+    </p>
+    <p id="copyright">&copy; Affirmations, Inc.</p>
+    </footer>
   </body>
 </html>
