Header and page title
To be decided on

--- a/index.html
+++ b/index.html
@@ -11,8 +11,32 @@
     <header>
       <a href="index.html">HOME</a>
       <a href="help.html">HELP PAGE</a>
+      <br>
+      <title>
+      <h1>QUOTES FOR => STUDY.PUSH</h1>
+      </title>
     </header>
+
+    <!-- <div class="MoodBoard">
+      <h2> How Do You Feel about your studies Today...?</h2>
+    </div>
+     <section>
+
+    <div class="Mood-Selector">
+      <div class="Happy">I feel HAPPY</div>
+      <div class="DeMotivated">I feel DE-MOTIVATED</div>
+      <div class="Impostor">I feel like an IMPOSTOR</div>
+      <div class="Inspired">I feel INSPIRED</div>
+      <div class="Sad">I feel SAD and unspired</div>
+      <div class="Motivated">I feel MOTIVATED</div>
+    </div>
+
+    <div class="DisplayBoard">
+     How do we display each message from our mood selector tabs here...?
+    </div>
+
+    </section>
 
     <footer></footer>
   </body>
-</html>
+</html> -->
