mood selector and mood display board

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </title>
     </header>
 
-    <!-- <div class="MoodBoard">
+    <div class="MoodBoard">
       <h2> How Do You Feel about your studies Today...?</h2>
     </div>
      <section>
@@ -39,4 +39,4 @@
 
     <footer></footer>
   </body>
-</html> -->
+</html>
