Changes made to styles
Changes made to styling to accommodate addition of new work

--- a/help.html
+++ b/help.html
@@ -36,7 +36,7 @@
 
     </main>
 
-    <footer>
+    <footer class="end">
         <h2>Contact</h2>
         <aside class="contact-icon">
             <span><i class="fa-solid fa-phone"></i>Call</span>
