--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
       <a href="index.html">HOME</a>
       <a href="help.html">HELP PAGE</a>
       <br>
-      <title>
-      <h1>QUOTES FOR => STUDY.PUSH</h1>
-      </title>
+      <div class="page-name"></div>
+        <h1>QUOTES FOR => STUDY.PUSH</h1>
+        <h4>Soulful Truths To Help Students Push through Studies!</h4>
+      </name>
     </header>
 
-    <div class="MoodBoard">
+    <div class="moodBoard">
       <h2> How Do You Feel about your studies Today...?</h2>
     </div>
+
      <section>
 
-    <div class="Mood-Selector">
+    <div class="mood-selector">
       <div class="Happy">I feel HAPPY</div>
       <div class="DeMotivated">I feel DE-MOTIVATED</div>
       <div class="Impostor">I feel like an IMPOSTOR</div>
