--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
       <nav class="navbar">
         <aside class="titlelogo">
-            <span>Logo</span>
-            <h1 class="title">Daily Affirmations</h1>
+            <span><img src="Affirmations logo.png" alt=""></span>
+            <h1 class="title">Soulful Truths</h1>
         </aside>
         <section class="nav-links">
             <input id="check" type="checkbox" />
@@ -29,50 +29,20 @@
             </li>
             </ul>
         </section>
-        <!-- <h4>Soulful Truths To Help Students Push through Studies!</h4> -->
+        <!-- <h5>Soulful Truths To Help Students Push through Studies!</h5> -->
       </nav>
     </header>
 
     <main>
 
-    <div class="moodBoard">
-      <h2> How Do You Feel Today...?</h2>
-    </div>
+      <h3> How Do You Feel Today...?</h3>
 
-     <section class="mood-selector">
-        <div class="mood">
-            <input type="checkbox" id="happy">
-            <label for="happy" class="spec-mood">HAPPY</label>
-            <aside class="quote">Always be happy and clappy</aside>
-        </div>
-      <div class="mood">
-        <input type="checkbox" id="demotivated">
-        <label for="demotivated" class="spec-mood">DEMOTIVATED</label>
-        <aside class="quote">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, fugit?</aside>
-      </div>
-      <div class="Impostor">I feel like an IMPOSTOR</div>
-      <div class="Inspired">I feel INSPIRED</div>
-      <div class="Sad">I feel SAD and unspired</div>
-      <div class="Motivated">I feel MOTIVATED</div>
-    </section>
-
-    <div class="DisplayBoard">
-     How do we display each message from our mood selector tabs here...?
-    </div>
-
-    
-
-    </main>
 
     <footer>
         <h2>Contact</h2>
-        <aside class="contact-icon">
-            <span><i class="fa-solid fa-phone"></i>Call</span>
-            <p>075 xxxx xxxx</p>
-        </aside>
 
         <aside class="contact-icon">
-            <span><i class="fa-regular fa-envelope"></i>Mail</span>
+            <span><i class="fa-regular fa-envelope"></i>Email</span>
             <p>info@affirmations.com</p>
         </aside>
 
@@ -90,7 +60,6 @@
                 <li><a href="">Twitter</a></li>
             </ul>
         </section>
-    </p>
     <p id="copyright">&copy; Affirmations, Inc.</p>
     </footer>
   </body>
