--- a/index.html
+++ b/index.html
@@ -5,62 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://kit.fontawesome.com/d81457d759.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d81457d759.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Affirmation Page</title>
   </head>
   <body>
     <header>
       <nav class="navbar">
         <aside class="titlelogo">
-            <span><img src="Affirmations logo.png" alt=""></span>
-            <h1 class="title">Soulful Truths</h1>
+          <span><img src="Affirmations logo.png" alt="" /></span>
+          <h1 class="title">Soulful Truths</h1>
         </aside>
         <section class="nav-links">
-            <input id="check" type="checkbox" />
-            <label for="check" id="checkID">
-                    <i class="fa-solid fa-bars"></i>
-            </label>
-            <ul class="nav-items">
+          <input id="check" type="checkbox" />
+          <label for="check" id="checkID">
+            <i class="fa-solid fa-bars"></i>
+          </label>
+          <ul class="nav-items">
             <li>
-                <a href="index.html">HOME</a>
+              <a href="index.html">HOME</a>
             </li>
             <li>
-                <a href="help.html">HELP PAGE</a>
+              <a href="help.html">HELP PAGE</a>
             </li>
-            </ul>
+          </ul>
         </section>
         <!-- <h5>Soulful Truths To Help Students Push through Studies!</h5> -->
       </nav>
     </header>
 
     <main>
-
-      <h3> How Do You Feel Today...?</h3>
-
+      <h3>How Do You Feel Today...?</h3>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque
+        provident delectus quaerat! Quos expedita corporis hic, nulla cupiditate
+        ex vel minus, sed eius aut distinctio, exercitationem quibusdam commodi
+        optio quasi?
+      </p>
+    </main>
 
     <footer>
-        <h2>Contact</h2>
+      <h2>Contact</h2>
 
-        <aside class="contact-icon">
-            <span><i class="fa-regular fa-envelope"></i>Email</span>
-            <p>info@affirmations.com</p>
-        </aside>
+      <aside class="contact-icon">
+        <span><i class="fa-regular fa-envelope"></i>Email</span>
+        <p>info@affirmations.com</p>
+      </aside>
 
-        <section class="social">
-            <ul class="name-icon">
-                <li><i class="fa-brands fa-instagram"></i></li>
-                <li><a href="instagram.com">Instagram</a></li>
-            </ul>
-            <ul class="name-icon">
-                <li><i class="fa-brands fa-facebook-f"></i></li>
-                <li><a href="facebook.com">Facebook</a></li>
-            </ul>
-            <ul class="name-icon">
-                <li><i class="fa-brands fa-twitter"></i></li>
-                <li><a href="">Twitter</a></li>
-            </ul>
-        </section>
-    <p id="copyright">&copy; Affirmations, Inc.</p>
+      <section class="social">
+        <ul class="name-icon">
+          <li><i class="fa-brands fa-instagram"></i></li>
+          <li><a href="instagram.com">Instagram</a></li>
+        </ul>
+        <ul class="name-icon">
+          <li><i class="fa-brands fa-facebook-f"></i></li>
+          <li><a href="facebook.com">Facebook</a></li>
+        </ul>
+        <ul class="name-icon">
+          <li><i class="fa-brands fa-twitter"></i></li>
+          <li><a href="">Twitter</a></li>
+        </ul>
+      </section>
+      <p id="copyright">&copy; Affirmations, Inc.</p>
     </footer>
   </body>
 </html>
