--- a/help.html
+++ b/help.html
@@ -4,14 +4,14 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="help.css" />
+      <link rel="stylesheet" href="/help.css" />
       <title>Help page</title>
     </head>
     <body>
       <header>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/help.css" />
     <script src="https://kit.fontawesome.com/d81457d759.js" crossorigin="anonymous"></script>
     <title>Help page</title>
  
@@ -132,8 +132,5 @@
       </p>
       <p id="copyright">&copy;STAffirmations: Class9!</p>
     </footer>
-  </body>
-
-  </html>
     </body>
   </html>
