code recovered and reinstated
Code recovered and reinstated for all pages

--- a/help.html
+++ b/help.html
@@ -1,3 +1,39 @@
+<!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="help.css" />
+       <script
+      src="https://kit.fontawesome.com/d81457d759.js"
+      crossorigin="anonymous"
+    ></script>
+      <title>Help page</title>
+    </head>
+    <body>
+       <header>
+      <nav class="navbar">
+        <aside class="titlelogo">
+          <span><img src="Affirmations logo.png" alt="" /></span>
+          <h1 class="title">Soulful Truths</h1>
+        </aside>
+        <section class="nav-links">
+          <input id="check" type="checkbox" />
+          <label for="check" id="checkID">
+            <i class="fa-solid fa-bars"></i>
+          </label>
+          <ul class="nav-items">
+            <li>
+              <a href="index.html">HOME</a>
+            </li>
+            <li>
+              <a href="help.html">HELP PAGE</a>
+            </li>
+          </ul>
+        </section>
+      </nav>
+    </header>
 
     <main>
 
@@ -67,7 +103,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="end">
       <h2>Contact</h2>
 
       <aside class="contact-icon">
