HTML page tidied up

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <p id="quote3"></p>
 
         <button onclick="displayQuote2()" class="round-button" id="uninspired">
-          UNINSPIRED!
+          UNINSPIRED
           <br /><i class="fa-regular fa-face-grimace"></i>
         </button>
         <p id="quote2"></p>
 
         <button onclick="displayQuote()" class="round-button" id="inspired">
-          INSPIRED!
+          INSPIRED
           <br /><i class="fa-regular fa-face-grin-stars"></i>
         </button>
         <p id="quote"></p>
@@ -98,13 +98,6 @@
           document.getElementById("quote3").innerHTML = quotes3[randomIndex];
         }
       </script>
-
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque
-        provident delectus quaerat! Quos expedita corporis hic, nulla cupiditate
-        ex vel minus, sed eius aut distinctio, exercitationem quibusdam commodi
-        optio quasi?
-      </p>
     </main>
 
     <footer>
@@ -129,7 +122,7 @@
           <li><a href="">Twitter</a></li>
         </ul>
       </section>
-      <p id="copyright">&copy; Affirmations, Inc.</p>
+      <p id="copyright">&copy; STAffirmations, Inc.</p>
     </footer>
   </body>
 </html>
