creating a hover button for help page

--- a/help.html
+++ b/help.html
@@ -40,20 +40,31 @@
     <main>
 
       <p>Need help with a coding project or have a question about a specific language or concept? Check out these forums
-        and communities:</p>
-
-      <h2><button class="forums">
-          <h2>CLICK HERE</h2>
-        </button> to access some helpful Coding Forums and Programming Resources</h2>
-      <div id="helpsites">
-        <ul>
-          <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
-          <li><a href="https://www.w3schools.com/php/php_ref_mysqli.asp">W3Schools PHP Forum</a></li>
-          <li><a href="https://www.reddit.com/r/learnprogramming/">/r/learnprogramming on Reddit</a></li>
-          <li><a href="https://www.codecademy.com/forum">Codecademy Forum</a></li>
-          <li><a href="https://www.udacity.com/community">Udacity Community</a></li>
-        </ul>
+        and communities:</p> <br> <h2>Need Help?</h2>
+        <div class="dropdown">
+      <p><button class="dropbtn"><h3>CLICK HERE</h3>
+        </button> <br> <p>To access some helpful Coding Forums and Programming Resources</p>
+      <div class="dropdown-content">
+        
+          <a href="https://stackoverflow.com/">Stack Overflow</a> <br>
+          <a href="https://www.w3schools.com/php/php_ref_mysqli.asp">W3Schools PHP Forum</a> <br>
+          <a href="https://www.reddit.com/r/learnprogramming/">/r/learnprogramming on Reddit</a> <br>
+          <a href="https://www.codecademy.com/forum">Codecademy Forum</a> <br>
+          <a href="https://www.udacity.com/community">Udacity Community</a>
+        
       </div>
+      </div>
+
+<!-- <div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div> -->
+
+
 
       <p>Remember to always be respectful and follow the forum rules and guidelines when posting or asking for help.</p>
 
