--- a/help.html
+++ b/help.html
@@ -12,10 +12,10 @@
       <title>Help page</title>
     </head>
     <body>
-       <header>
+     <header>
       <nav class="navbar">
         <aside class="titlelogo">
-          <span><img src="Affirmations logo.png" alt="" /></span>
+          <span><img src="Soulful.png" alt="" /></span>
           <h1 class="title">Soulful Truths</h1>
         </aside>
         <section class="nav-links">
