--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       src="https://kit.fontawesome.com/d81457d759.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=Kalam&family=Kaushan+Script&family=Lobster+Two&family=Oleo+Script&family=Permanent+Marker&family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>Affirmation Page</title>
   </head>
 
@@ -30,6 +36,9 @@
             </li>
             <li>
               <a href="help.html">HELP PAGE</a>
+            </li>
+            <li>
+              <a href="about.html">ABOUT US</a>
             </li>
           </ul>
         </section>
