--- a/about.html
+++ b/about.html
@@ -46,7 +46,36 @@
     </header>
 
     <main>
-      <h1 class="about-title">About Us</h1>
+      <h1 class="about-title">
+        <picture>
+          <source
+            srcset="
+              https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.webp
+            "
+            type="image/webp"
+          />
+          <img
+            src="https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.gif"
+            alt="❤"
+            width="32"
+            height="32"
+          /> </picture
+        >About Us
+        <picture>
+          <source
+            srcset="
+              https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.webp
+            "
+            type="image/webp"
+          />
+          <img
+            src="https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.gif"
+            alt="❤"
+            width="32"
+            height="32"
+          />
+        </picture>
+      </h1>
       <p>
         This page was created by Gayle, Andriana and Abdulmajid as a group
         project as part of our course at Code Your Future (CYF)
