--- a/index.html
+++ b/index.html
@@ -51,31 +51,101 @@
       <section class="emotion-buttons">
         <button onclick="displayQuote3()" class="round-button" id="scared">
           SCARED
-          <br /><i class="fa-regular fa-face-tired"></i>
+          <br />
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f623/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f623/512.gif"
+              alt="😣"
+              width="32"
+              height="32"
+            />
+          </picture>
         </button>
         <p id="quote3"></p>
 
         <button onclick="displayQuote2()" class="round-button" id="uninspired">
           UNINSPIRED
-          <br /><i class="fa-regular fa-face-grimace"></i>
+          <br />
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.gif"
+              alt="😬"
+              width="32"
+              height="32"
+            />
+          </picture>
         </button>
         <p id="quote2"></p>
 
         <button onclick="displayQuote()" class="round-button" id="inspired">
           INSPIRED
-          <br /><i class="fa-regular fa-face-grin-stars"></i>
+          <br />
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f929/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f929/512.gif"
+              alt="🤩"
+              width="32"
+              height="32"
+            />
+          </picture>
         </button>
         <p id="quote"></p>
 
         <button onclick="displayQuote5()" class="round-button" id="happy">
           HAPPY
-          <br /><i class="fa-regular fa-face-laugh-beam"></i>
+          <br />
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f600/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f600/512.gif"
+              alt="😀"
+              width="32"
+              height="32"
+            />
+          </picture>
         </button>
         <p id="quote5"></p>
 
         <button onclick="displayQuote4()" class="round-button" id="sad">
           SAD
-          <br /><i class="fa-regular fa-face-frown"></i>
+          <br />
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f61e/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f61e/512.gif"
+              alt="😞"
+              width="32"
+              height="32"
+            />
+          </picture>
         </button>
         <p id="quote4"></p>
       </section>
