Files added into corresponding folders

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="help.css" />
+    <link rel="stylesheet" href="/CSS/help.css" />
     <script
       src="https://kit.fontawesome.com/d81457d759.js"
       crossorigin="anonymous"
@@ -23,7 +23,7 @@
        <header>
         <nav class="navbar">
           <aside class="titlelogo">
-            <span><img src="Soulful.png" alt="" /></span>
+            <span><img src="/IMAGE/Soulful.png" alt="" /></span>
             <h1 class="title">Soulful Truths</h1>
           </aside>
           <section class="nav-links">
@@ -33,13 +33,13 @@
             </label>
             <ul class="nav-items">
               <li>
-                <a href="index.html">HOME</a>
+                <a href="/HTML/index.html">HOME</a>
               </li>
               <li>
-                <a href="help.html">HELP PAGE</a>
+                <a href="/HTML/help.html">HELP PAGE</a>
               </li>
               <li>
-                <a href="about.html">ABOUT US</a>
+                <a href="/HTML/about.html">ABOUT US</a>
               </li>
             </ul>
           </section>
