Updated buttons and cursor img

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -54,7 +54,7 @@
       <section class="help-forums">
         
         <button class="accordion">
-            <img src="../IMAGE/pointer-images.png" alt="clicking hand image">
+            <img src="/IMAGE/images.png" alt="clicking hand image">
             <h3>HERE</h3>
         </button>
 
